fix(home): prepare grid

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,4 +3,34 @@
 
 /* Your own custom component styles */
 
+@layer base {
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  a {
+    @apply text-stone-800;
+  }
+  button {
+    @apply px-4 py-2 rounded;
+  }
+  .mansory {
+    @apply px-6 py-4 max-w-screen-xl grid grid-cols-4 grid-rows-4 gap-1;
+  }
+  .box {
+    @apply shadow-inner overflow-hidden rounded-xl bg-white;
+  }
+  .box-2h {
+    @apply row-span-2;
+  }
+  .box-2w {
+    @apply col-span-2;
+  }
+}
+
 @import 'tailwindcss/utilities';
