--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,7 @@
     @apply px-4 py-2 rounded;
   }
   .mansory {
-    @apply px-6 py-4 max-w-screen-xl grid grid-cols-4 grid-rows-4 gap-1;
+    @apply py-2 max-w-screen-2xl mx-auto grid grid-cols-4 gap-6;
   }
   .box {
     @apply shadow-inner overflow-hidden rounded-xl bg-white;
