--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
     @apply text-stone-800;
   }
   button {
-    @apply px-4 py-2 rounded;
+    @apply px-4 py-2 rounded hover:opacity-60;
   }
   .mansory {
     @apply py-2 max-w-screen-2xl mx-auto grid grid-cols-4 gap-6;
